scrollbar in sms component fixed, for bigger screens

--- a/src/css/overall-layout.css
+++ b/src/css/overall-layout.css
@@ -1,7 +1,7 @@
 
 
 .border {
-  background-color: gray;
+  background-color: #b2b9b9;;
 }
 
 .grid-container {
@@ -12,18 +12,17 @@
   /* 12 column in 1 row, 1fr (1 part of available space) here the whole row space */
   grid-template-columns: repeat(12,1fr);  
   /* 1st row auto, 3rd row auto, 2nd row (1 part of available space) */
-  grid-template-rows: auto 1fr 22px;      
+  grid-template-rows: auto 1fr auto;      
   /* grid-row-start=1, grid-row-end=3. i.e. 3 rows in grid */
-  /* grid-row : 1 / 3;   */
+  grid-row : 1 / 3;  
   /*
   https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Box_Alignment_in_CSS_Grid_Layout 
   */
   grid-template-areas:
-    "h h h h h h h h h h h h"                     
-    "s s s m m m m m m m m m"
-    "f f f f f f f f f f f f";
-  grid-gap: 1px; 
-  
+    ". . . . . . . . . . . ."                     
+    ". a a a a a a a a a a ."
+    ". . . . . . . . . . . .";
+  grid-gap: 1px;
 }
 
 /*
@@ -37,9 +36,8 @@ https://stackoverflow.com/questions/13792755/show-border-grid-lines-only-between
 
 /*================== Menu Header ================== */
 .header {
-  grid-area: h;
   /* The first div class is header occupies 12 column, ie 1st entire row */
-  /* grid-column: span 12;                    */
+  grid-column: span 12;                   
 }
 
 
@@ -48,68 +46,35 @@ https://stackoverflow.com/questions/13792755/show-border-grid-lines-only-between
 
 /*=== For login, register options ===*/
 .center-grid {
-  /*grid-area: grid-row-start / grid-column-start / grid-row-end / grid-column-end | area */
-
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 3;
-  -ms-grid-column: 6;
-  -ms-grid-column-span: 12;
-  -ms-grid-row-align: center;
-  -ms-grid-column-align: center;
-
-  /* autoprefixer: off */
-  grid-area: 2 / 1 / span 2 / span 12;
+  grid-area: a;
   align-self: center;   /* values: start, center , end */
   justify-self: center; /* a box is justified inside its alignment container along the appropriate axis. */
-
 }
 
-/*=== After login, and contents ===*/
+/*=== After login, treeview and contents ===*/
 .aside {
   /* The second div class is aside, takes 2 column out of 12 in second row*/
-  /* grid-column: span 2;                    */
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 3;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 5;
-  
-  /* autoprefixer: off */  
-  grid-area: s; /* 2 / 1 / span 2 / span 3; */
+  grid-column: span 2;                    
   /* The treenode should show auto scrollbar on content overflow */
   overflow: auto;                         
 }
 .contents {
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 3;
-  -ms-grid-column: 7;
-  -ms-grid-column-span: 23;
-  
-  /* autoprefixer: off */
-  grid-area: m; /* 2 / 4 / span 2 / span 12; */
   /* The third div class is contents, takes 10 column after aside in second row */
-  /* grid-column: span 10;                   */
+  grid-column: span 10;                   
 }
 
 /* react-split-pane requirement for middle row */
 .middleContents {
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 3;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 23;
-
-  /* grid-column: span 12; */
-  /* autoprefixer: off */
-  grid-area: 2 / 1 / span 2 / span 12;
+  grid-column: span 12;
 }
 
 /*================== Footer ================== */
 .footer {
-  grid-area: f; /* 3 / 1 / span 3 / span 12; */
   /* The forth div class is footer, takes 12 column in 3rd row */
-  /* grid-column: span 12;                    */
+  grid-column: span 12;                   
   /* Align the text in the footer at the center */
   text-align: center;
-  font-size: 12px;
+  font-size: 2vh;
   font-weight: bold;
 }
 
